--- a/app/src/main/res/layout-v21/activity_text_book.xml
+++ b/app/src/main/res/layout-v21/activity_text_book.xml
@@ -10,7 +10,7 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.TextBookActivity"
+            tools:context=".ui.activities.TextBookActivity"
             android:orientation="vertical">
 
         <include layout="@layout/toolbar"/>
