--- a/app/src/main/res/layout-v21/activity_all_words.xml
+++ b/app/src/main/res/layout-v21/activity_all_words.xml
@@ -23,9 +23,9 @@
                 android:id="@+id/fabDictionary"
                 android:layout_gravity="bottom|end"
                 android:layout_marginBottom="21dp"
-                android:layout_marginRight="21dp"
                 android:layout_marginEnd="21dp"
+                android:elevation="11dp"
                 android:src="@drawable/ic_add_24dp"/>
-
     </FrameLayout>
+
 </android.support.design.widget.CoordinatorLayout>
