--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activities.AddWordActivity"
+        tools:context=".ui.activities.AddModifyWordActivity"
         android:orientation="vertical">
 
     <EditText
@@ -23,7 +23,7 @@
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/btnAddWord"
+            android:id="@+id/btnSaveWord"
             android:layout_marginTop="21dp"
             android:text="Add Word"/>
 
