--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -7,8 +7,8 @@
 
     <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_item_word"
+            android:layout_height="50dp"
+            android:id="@+id/tvItemWord"
             android:text="[none]"/>
 
 </FrameLayout>
