--- a/app/src/main/res/layout-v21/activity_dictionary.xml
+++ b/app/src/main/res/layout-v21/activity_dictionary.xml
@@ -4,7 +4,7 @@
 <android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context=".ui.activities.AllWordsActivity"
+        tools:context=".ui.activities.DictionaryActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
