--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
+
+<android.support.design.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".ui.activities.DictionaryActivity"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.activities.AddModifyWordActivity"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-    <EditText
+    <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editSanskrit"
-            android:hint="Sanskrit"/>
+            android:layout_height="match_parent">
 
-    <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/editRomana"
-            android:hint="Romana"/>
+        <include layout="@layout/layout_all_words"/>
 
-    <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnSaveWord"
-            android:layout_marginTop="21dp"
-            android:text="Add Word"/>
+        <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/fabDictionary"
+                android:layout_gravity="bottom|end"
+                android:layout_marginBottom="21dp"
+                android:layout_marginRight="21dp"
+                android:layout_marginEnd="21dp"
+                android:src="@drawable/ic_add_24dp"/>
+    </FrameLayout>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
