--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activities.MainActivity">
+        tools:context=".ui.activities.MainActivity"
+        android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
+    <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/chapters" tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="0dp"/>
+            android:layout_height="100dp"
+            android:text="Book"
+            android:id="@+id/btnBook"/>
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:text="Dictionary"
+            android:id="@+id/btnDic"/>
+</LinearLayout>
